--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,61 @@
 <resources>
-    <string name="app_name">wakacje1</string>
+    <string name="app_name">Wakacje1</string>
+
+    <string name="btn_back">Wstecz</string>
+    <string name="btn_return">Wróć</string>
+    <string name="btn_my_plans">Moje plany</string>
+    <string name="btn_save">Zapisz</string>
+    <string name="btn_load">Wczytaj</string>
+    <string name="btn_pdf">PDF</string>
+    <string name="btn_generate">Wygeneruj plan</string>
+    <string name="btn_show_plan">Pokaż plan</string>
+    <string name="btn_refresh_weather">Odśwież pogodę</string>
+    <string name="btn_cancel">Anuluj</string>
+    <string name="btn_roll">Losuj</string>
+    <string name="btn_roll_day">Losuj cały dzień</string>
+    <string name="btn_custom">Własne</string>
+    <string name="btn_up">W górę</string>
+    <string name="btn_down">W dół</string>
+    <string name="btn_expand">Rozwiń</string>
+    <string name="btn_collapse">Zwiń</string>
+
+    <string name="title_plan_screen">Plan wyjazdu</string>
+    <string name="title_destination_selection">Propozycje wyjazdu</string>
+    <string name="title_weather">Pogoda</string>
+    <string name="title_edit_mode">Tryb edycji</string>
+    <string name="label_edit_mode_desc_on">Możesz losować i edytować sloty.</string>
+    <string name="label_edit_mode_desc_off">Widok tylko do podglądu.</string>
+
+    <string name="day_prefix">Dzień %1$d</string>
+    <string name="slot_morning">Poranek</string>
+    <string name="slot_midday">Południe</string>
+    <string name="slot_evening">Wieczór</string>
+
+    <string name="dialog_custom_title">Własny pomysł — %1$s</string>
+    <string name="label_title">Tytuł</string>
+    <string name="label_description_optional">Opis (opcjonalnie)</string>
+
+    <string name="msg_processing">Przetwarzanie…</string>
+    <string name="msg_no_plan">Brak planu. Jeśli dopiero wybrałeś miejsce, poczekaj chwilę albo wygeneruj ponownie.</string>
+    <string name="msg_select_destination_instruction">Wybierz jedno z proponowanych miejsc. Potem wygenerujemy plan dzienny.</string>
+    <string name="msg_no_preferences">Brak preferencji — wróć i uzupełnij formularz.</string>
+    <string name="msg_no_suggestions">Brak propozycji dla tych preferencji (spróbuj zmienić budżet/region/klimat).</string>
+    <string name="msg_weather_loading">Ładowanie pogody dla: %1$s…</string>
+    <string name="msg_select_place_first">Wybierz miejsce, aby zobaczyć pogodę.</string>
+    <string name="msg_weather_now">Miejsce: %1$s\nTeraz: %2$s %3$s</string>
+    <string name="msg_transport_info">Transport (RT): ~%1$d–%2$d zł • użyte: %3$d zł (%4$s)</string>
+    <string name="msg_budget_info">Budżet po transporcie: ~%1$d zł/dzień • Min: %2$d zł/dzień</string>
+    <string name="msg_tags">Tagi: %1$s</string>
+    <string name="msg_forecast_format">Prognoza: %1$s%2$s%3$s</string>
+    <string name="msg_bad_weather_note"> • słaba → indoor</string>
+    <string name="msg_suggestions_header">Propozycje (%1$d) • scenariusz transportu: %2$s</string>
+
+    <string name="error_prefix">Błąd: %1$s</string>
+    <string name="error_select_place">Najpierw wybierz miejsce.</string>
+    <string name="error_budget_too_low">Budżet za niski po doliczeniu transportu.</string>
+    <string name="status_ok">OK</string>
+    <string name="status_budget_low">Za niski budżet</string>
+    <string name="labels_region_climate">Region: %1$s • Klimat: %2$s</string>
+    <string name="msg_pdf_activity_error">PDF działa tylko z Activity context.</string>
+
 </resources>
